hphp/test/slow/stringmap_array/msarray_parse_error.php.expectf
Fatal error: syntax error, unexpected ',' in %s/msarray_parse_error.php on line 4